<resources>
    <string name="app_name">Lesson1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="btn_image">Конвертер</string>
    <string name="upload_image">Нажмите для загрузки изображения</string>
    <string name="start_converting">Конвертировать в png</string>
    <string name="btn_abort_converse_text">Остановить конвертацию</string>

    <string name="ImageView_contentDescription_go_to_details_user">Аватар пользователя</string>
    <string name="textView_default_login_user_for_item_holder">Логин пользователя</string>
    <string name="default_text_top_string_plug">Полное имя пользователя (ФИО)</string>
    <string name="textView_default_center_string_stub">Строка статуса пользователя</string>
    <string name="ImageView_contentDescription_give_a_rating">Особая отметка</string>
    <string name="textView_default_bottom_string_for_item_holder">Нижняя строка карточки</string>
    <string name="ImageView_contentDescription_add_to_favorites">Иконка статуса нахождения в избранном / отслеживаемом</string>
    <string name="ImageView_contentDescription_error">Иконка сообщающая о налицчии ошибки</string>
    <string name="btn_image_selection_text">Выбрать изображение</string>
    <string name="btn_start_converting_text">Конвертировать в .PNG</string>
    <string name="btn_go_to_image_converter_text">Конвертер изображений</string>
    <string name="error_message_not_uri">Ошибка: Uri = null (не передан)</string>
    <string name="textView_default_name_repo_for_item_holder">Краткое наименование репозитория для холдера</string>
    <string name="textView_default_description_repo_for_item_holder">Описание репозитория для холдера</string>
    <string name="default_text_description_string_plug">описание репозитория (полное имя, описание, даты и т.п.)</string>
    <string name="textView_default_name_repository_for_item_holder">краткое наименование репозитория для холдера</string>
    <string name="tv_count_of_forks_string_stub">Количество форков: 100000</string>
</resources>