<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="4dp"
    android:elevation="2dp"
    android:padding="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:contentPadding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_user_avatar"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/ImageView_contentDescription_go_to_details_user"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
             />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/textView_default_login_user_for_item_holder"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_user_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTopString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/default_text_top_string_plug"
            app:layout_constraintStart_toEndOf="@id/imageView_user_avatar"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <TextView
            android:id="@+id/textViewCenterString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/textView_default_center_string_stub"
            app:layout_constraintStart_toEndOf="@id/imageView_user_avatar"
            app:layout_constraintTop_toBottomOf="@id/textViewTopString" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>